# nonebot-plugin-openai

./: README.md  pyproject.toml
func/: __init__.py  func_google_search.py  func_moegoe_tts.py
nonebot_plugin_openai/: __init__.py  _openai.py  config.py  function.py  settings.py  types.py  utils.py
test/: data.json  test_base_model.py
